2020-05-26 Jacob Bachmeyer <jcb62281+dev@gmail.com>

    * doc/dejagnu.texi (target_compile procedure): Add documentation.

2020-05-26 Jacob Bachmeyer <jcb62281+dev@gmail.com>

    * doc/dejagnu.texi (target_link procedure): New stub node.
    (default_link procedure): Document internal procedure.
    (default_target_assemble procedure): Likewise.
    (default_target_compile procedure): Likewise.

2020-05-20 Jacob Bachmeyer <jcb62281+dev@gmail.com>

    * baseboards/{aarch64-sim, arm-ice, arm-sim, basic-sid, iq2000-sim,
    mn10300-sim, moxie-sim}.exp: Cleanup up whitespace.

2020-05-20 Jacob Bachmeyer <jcb62281+dev@gmail.com>

	* lib/target.exp (default_target_compile): Use "host_info"
	procedure to probe for a host configuration, instead of checking a
	local empty target_info array due to lacking "global target_info".

2020-05-20 Jacob Bachmeyer <jcb62281+dev@gmail.com>

	* doc/dejagnu.texi (Adding a new board): Document that the
	"compiler" board_info field is optional and defaults to [find_gcc]
	if not given.
	(Board configuration file): Likewise.

	* lib/target.exp (default_target_compile): Establish a default C
	compiler by evaluating [find_gcc] if no other compiler is given.

	* baseboards/aarch64-sim.exp: Remove no-longer-needed
	"set_board_info compiler [find_gcc]" from this file.
	* baseboards/am33_2.0-libremote.exp: Likewise.
	* baseboards/androideabi.exp: Likewise.
	* baseboards/arm-ice.exp: Likewise.
	* baseboards/arm-sim.exp: Likewise.
	* baseboards/cris-sim.exp: Likewise.
	* baseboards/d30v-sim.exp: Likewise.
	* baseboards/fr30-sim.exp: Likewise.
	* baseboards/frv-sim.exp: Likewise.
	* baseboards/gdbserver-sample.exp: Likewise.
	* baseboards/iq2000-sim.exp: Likewise.
	* baseboards/linux-gdbserver.exp: Likewise.
	* baseboards/linux-libremote.exp: Likewise.
	* baseboards/mcore-moto-sim.exp: Likewise.
	* baseboards/mcore-sim.exp: Likewise.
	* baseboards/mips-sim-idt32.exp: Likewise.
	* baseboards/mips-sim-idt64.exp: Likewise.